--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="bg-gray-50 dark:bg-gray-800">
-  <%= render 'admin/dashboard/layout/navbar' %>>
+  <%= render 'admin/dashboard/layout/navbar' %>
 
   <div class="flex pt-16 overflow-hidden bg-gray-50 dark:bg-gray-900">
 
@@ -9,11 +9,11 @@
     <div id="main-content" class="relative w-full h-full overflow-y-auto bg-gray-50 lg:ml-64 dark:bg-gray-900">
       <main>
 
-        <%= render 'admin/dashboard/layout/dashboard' %>>
+        <%= render 'admin/dashboard/layout/dashboard' %>
 
       </main>
 
-      <%= render 'admin/dashboard/layout/footer' %>>
+      <%= render '/admin/dashboard/layouts/footer' %>
 
     </div>
 
